--- a/Camera.html
+++ b/Camera.html
@@ -179,16 +179,45 @@
       <form action="/action_page.php">
   <label for="favcolor">What color is your camera?</label>
   <input type="color" id="favcolor" name="favcolor" value="#ff0000">
-  <br>
+  <br />
+  <br />
+  <input
+        type="submit"
+        name="submitButton"
+        id="submit"
+        value="Click here to submit your answers"
+      >
+  
     
+
+  <h2 style="background-color:rgb(216, 216, 216) "><center> Good cameras</center> </h2>
+  
+  <center>
+    <table>
+    <tr>
+      <th><i>Nikon</i></th>
+      <th><i>Canon</i></th>
+      <th><i>Other</i></th>
+    </tr>
+    <tr>
+      <td>D850</td>
+      <td>EOS 90D</td>
+      <td>Sony A7 IV</td>
+    </tr>
+    <tr>
+      <td>D6</td>
+      <td>EOS Rebel SL3 / EOS 250D</td>
+      <td>FujiFilm X-T4</td>
+    </tr>
+    <tr>
+      <td>D850</td>
+      <td>EOS 6D Mark II</td>
+      <td>OLYMPUS OM system OM-1</td>
+    </tr
+    </table>
+  </center>
+   
     
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
 
 
 
